# libidn

./: .clcopying  .cvscopying  .cvsignore  .gitignore  .x-sc_avoid_if_before_free  .x-sc_bindtextdomain  .x-sc_cast_of_alloca_return_value  .x-sc_error_message_uppercase  .x-sc_file_system  .x-sc_makefile-check~  .x-sc_makefile_at_at_check  .x-sc_makefile_check  .x-sc_makefile_check~  .x-sc_prohibit_atoi_atof  .x-sc_prohibit_empty_lines_at_EOF  .x-sc_space_tab  .x-sc_space_tab~  .x-sc_the_the  ANNOUNCE  AUTHORS  COPYING  ChangeLog  FAQ  GNUmakefile  HACKING  Makefile.am  Makefile.cfg  Makefile.in  Makefile.maint  NEWS  README  README-alpha  THANKS  TODO  aclocal.m4  announce-gen  autogen.sh  cfg.mk  config.h.in  configure  (+49 more)
build-aux/: c++defs.h  gnupload
contrib/: README
csharp/: .cvsignore  AssemblyInfo.cs  CombiningClass.cs  Composition.cs  CompositionExclusions.txt  DecompositionKeys.cs  DecompositionMappings.cs  IDNA.cs  IDNAException.cs  Makefile.am  Makefile.in  NFKC.cs  Punycode.cs  PunycodeException.cs  RFC3454.cs  Stringprep.cs  StringprepException.cs  UnicodeData.txt  libidn.cmbx  libidn.prjx  rfc3454.txt
csharp/generate/: AssemblyInfo.cs  GenerateNFKC.cs  GenerateRFC3454.cs  HashSet.cs  Program.cs  Tokenizer.cs
doc/: .cvsignore  Makefile  Makefile.am  Makefile.gdoc  Makefile.gdoci  Makefile.in  announce.txt  components.fig  fdl.texi  gdoc  gdoc.mk  gendocs.sh  gendocs_template  gpl-3.0.texi  gpl.texi  idn.1  lgpl-2.1.texi  lgpl.texi  libidn-components.eps  libidn.css  libidn.info  libidn.texi  stamp-vti  texinfo.css  version.texi
doc/cyclo/: Makefile  Makefile.am  Makefile.in  cyclo-libidn.html
doc/html/: .cvsignore
doc/java/: .cvsignore  Makefile  Makefile.am  Makefile.in  allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  overview-tree.html
doc/java/gnu/inet/encoding/: .cvsignore  RangeSet.Builder.html  RangeSet.Range.html  RangeSet.html  package-frame.html  package-tree.html
doc/java/resources/: .cvsignore
doc/man/: .cvsignore  Makefile.am
doc/prmgt/: Makefile  Makefile.am  Makefile.am~  Makefile.in  libidn-cyclo.html  pmccabe.css
doc/reference/: .cvsignore  Makefile  Makefile.am  Makefile.in  libidn-docs.sgml  libidn-docs.tmpl
doc/reference/tmpl/: .cvsignore  idn-free.sgml  idna.sgml  pr29.sgml  punycode.sgml  stringprep.sgml  tld.sgml
doc/specifications/: COPYING.UCD  IDNstatement.txt  Makefile  Makefile.am  Makefile.in  draft-hoffman-rfc3454bis-00.txt  draft-ietf-idn-nameprep-04.txt  draft-ietf-ldapbis-dn-14.txt  draft-ietf-ldapbis-strprep-04.txt  draft-josefsson-idn-test-vectors.xml  pr-29.html  rfc3454.txt  stringprep-profiles
doc/texi/: idn-free.c.texi  idna_strerror.texi  idna_to_ascii_4i.texi  idna_to_ascii_4z.texi  idna_to_ascii_lz.texi  idna_to_unicode_44i.texi  idna_to_unicode_8z4z.texi  idna_to_unicode_8z8z.texi  idna_to_unicode_8zlz.texi  idna_to_unicode_lzlz.texi  nfkc.c.texi  pr29.c.texi  pr29_4.texi  pr29_4z.texi  punycode_encode.texi  strerror-pr29.c.texi  strerror-stringprep.c.texi  stringprep.texi  stringprep_4zi.texi  stringprep_convert.texi  stringprep_profile.texi  stringprep_strerror.texi  stringprep_unichar_to_utf8.texi  stringprep_utf8_to_locale.texi  tld.c.texi  tld_check_4t.texi  tld_check_4tz.texi  tld_check_4z.texi  tld_check_8z.texi  tld_default_table.texi  tld_get_4.texi  tld_get_4z.texi  version.c.texi
doc/tld/: Makefile  Makefile.am  Makefile.in  README  fr.tld  no.tld
examples/: .cvsignore  Makefile.am  Makefile.in  README  example.c  example2.c  example3.c  example4.c  example5.c
gl/: .cvsignore  Makefile.am  Makefile.in  error.c  error.h  getopt.c  getopt1.c  getopt_.h  getopt_int.h  gettext.h  iconvme.c  memset.c  progname.h  strerror.c  string.in.h  unistd.in.h  unistd_.h
gl/m4/: Makefile.am  gnulib-cache.m4  gnulib-common.m4  gnulib-comp.m4  gnulib.m4  open.m4
gl/override/doc/: gendocs_template.diff
gl/override/lib/: gettext.h.diff  progname.h.diff
gltests/: Makefile.am  Makefile.in  dup2.c  malloca.c  malloca.h  stdint.in.h  sys_stat.in.h  time.in.h  wchar.in.h
java/: .cvsignore  Makefile.am  Makefile.in  README.UNICODE  README.html  pom.xml.in
lib/: .cvsignore  Makefile.am  Makefile.in  gen-stringprep-tables.pl  gen-tld-tables.pl  gen-unicode-tables.pl  gunibreak.h  gunicomp.h  gunidecomp.h  idn-free.c  idn-free.h  idna.c  idna.h  internal.h  libidn.map  nfkc.c  obsolete.c  pr29.c  pr29.h  profiles.c  punycode.c  punycode.h  strerror-idna.c  strerror-pr29.c  strerror-punycode.c  strerror-stringprep.c  strerror-tld.c  stringprep.c  stringprep.h  stringprep.h.in  stringprep_kerberos5.h  stringprep_plain.h  stringprep_xmpp.h  tld.c  tld.h  toutf8.c  version.c
lib/gl/: .cvsignore  Makefile.am  Makefile.in  c-ctype.h  c-strcase.h  c-strcasecmp.c  c-strncasecmp.c  gettext.h  gnulib.mk  iconv.c  iconv.in.h  iconv_.h  iconv_close.c  iconv_open.c  iconvme.c  iconvme.h  stdint.in.h  striconv.c  striconv.h  string.h  string.in.h  strverscmp.c  wchar.in.h
lib/gl/m4/: gnulib-cache.m4  gnulib-comp.m4  visibility.m4
lib/gl/override/lib/: gettext.h.diff  stdint.in.h.diff
lib/gl/unistr/: u8-mbtoucr.c  u8-uctomb-aux.c  u8-uctomb.c
lib/gltests/: Makefile.am  Makefile.in  gnulib.mk  localename.c
lib/gltests/glthread/: lock.c  lock.h  thread.c  thread.h  yield.h
libc/: Makefile  README  Versions  example.c  getaddrinfo-idn.txt  getaddrinfo.c  idn-stub.c  libc.patch  netdb.h
m4/: .cvsignore  Makefile.am  ax_create_stdint_h.m4  update-header-version.m4  valgrind.m4
po/: .cvsignore  ChangeLog  LINGUAS  cs.gmo  cs.po  cs.po.in  da.gmo  da.po  da.po.in  de.gmo  de.po  de.po.in  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  eo.gmo  eo.po  eo.po.in  fi.gmo  fi.po  (+43 more)
reference/: .cvsignore  Makefile.am  dummy.c  libidn-docs.sgml  libidn-docs.tmpl
reference/tmpl/: .cvsignore  idna.sgml  punycode.sgml  stringprep.sgml  stringprep_generic.sgml  stringprep_kerberos5.sgml  stringprep_nameprep.sgml  stringprep_xmpp.sgml
src/: .cvsignore  Makefile.am  Makefile.in  idn.c  idn.ggo  idn.ggo.in  idna.el  punycode.el
(+90 files in other folders)
